--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
 :root {
   --primary-color: #ff6b6b;
   --secondary-color: #79a4fa;
-  --secondary-dark-color: #3453c1;
+  --secondary-dark-color: #453c5c;
 
   --white-color: #ffffff;
   --light-bg-color: #f2f3f5;
@@ -39,7 +39,7 @@
     margin: 0;
     padding: 0;
 }
-*, *::before, *::after {
+*,::before,::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -148,8 +148,8 @@
   .main-links a:hover {
     color: var(--secondary-color);
   }
-  .secondary-links a:hover {
-    color:var(--light-text-color);
+  .second-links a:hover {
+    color: var(--light-text-color);
   }
   .second-links li {
     margin-right: 1.5em;
@@ -165,7 +165,7 @@
   }
 .icon-small {
     font-size: 1.25em;
-    margin:auto;
+    margin-left:auto;
   }
 .icon-large {
     font-size: 1.75em;
@@ -363,6 +363,12 @@ header li > a {
 
 /* b. Header Nav
 --------------------------------------------*/
+.header-nav {
+  padding: 0.5em 0;
+  margin-bottom: 1.5em;
+  border-bottom: 1px solid var(--border-color)
+}
+
 .trigger {
     font-size: 1.5em;
     display: flex;
@@ -390,7 +396,7 @@ header li > a {
     background-color: var(--light-bg-color);
     z-index: -1;
 }
-.circle ::before {
+.circle::before {
     content: '';
     position: absolute;
     width: 28px;
@@ -451,7 +457,7 @@ nav .fly-item {
 .mega .flexcol {
   flex: 1;
   min-width: 180px;
-  padding: 2.5em;
+  padding-right: 2.5em;
   margin-bottom: 1.5em;
   z-index: 1;
 }
@@ -497,10 +503,19 @@ nav .fly-item {
   width: 60px;
 }
 
+.dpt-menu > ul > li > a {
+  font-size: var(--font-small);
+  height: 46px;
+  align-items: center;
+}
+
 /* 01. HEADER
 --------------------------------------------*/
 /* d. Search Form
 --------------------------------------------*/
+
+
+
 
 .header-main .right {
   flex: 1;
@@ -542,16 +557,13 @@ form.search button {
   border-radius: 0 7px 7px 0;
   cursor: pointer;
   transition: var(--trans-background);
-
 }
 
 form.search button:hover {
   background-color: var(--dark-color);
 }
 
-form.search button:hover {
-  background-color: var(--dark-color);
-}
+
 /* 01. HEADER
 --------------------------------------------*/
 /* e. Responsive MENU - Off Canvas
@@ -790,19 +802,24 @@ form.search button:hover {
     padding: 2.5em;
     line-height: 2em;
     background-color: var(--light-bg-color);
-    box-shadow:  rgb(0 0 0 /20%) 0 30px 20px -30px;
+   
     z-index: 100;
 
     display: none;
   }
 
-  nav li .has-child:hover .mega {
-    display: block;
+   nav li.has-child:hover .mega {
+    display:block;
   }
 
   nav .mega .wrapper {
     display: flex;
   }
+
+
+  
+
+  
 
   nav .mega h4 {
     font-size :0.8em;
@@ -865,6 +882,23 @@ form.search button:hover {
     margin-left: auto;
   }
 
+  /* Departments menu */
+  .dpt-menu {
+    position: absolute;
+    top: var(--percent100);
+    width: 300px;
+    background-color: var(--white-color);
+    border: 1px solid var(--border-color);
+    border-top: 0;
+    border-bottom: 0;
+  }
+
+  .dpt-menu > ul > li > a {
+    font-weight: var(--fw5);
+    padding: 0 1.5em;
+    border-bottom: 1px solid var(--border-color);
+
+  }
 
 }
 
