--- a/static/style.css
+++ b/static/style.css
@@ -33,16 +33,12 @@
   --trans-color: color .3s;
 }
 
-
-
 *{
     margin: 0;
     padding: 0;
 }
 *,::before,::after {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
   }
   
   body {
@@ -577,9 +573,20 @@ form.search button:hover {
 .site-off {
   position: fixed;
   width: 320px;
-  height: var(--white-color);
+  height: var(--percent100);
+  background-color: var(--white-color);
   overflow-y: auto;
   z-index: 1000;
+  transform: translateX(-100%);
+  visibility: hidden;
+  transition: transform .4s, visibility .4s;
+  will-change: transform, visibility;
+}
+
+.showmenu .site-off {
+  transform: translateX(0);
+  visibility: visible;
+  transform: transform .4s 0s, visibility 0s 0s;
 }
 
 .off-canvas {
@@ -643,6 +650,10 @@ form.search button:hover {
   transition: max-height .3s cubic-bezier(0.215, 0.610, 0.355, 1)
 }
 
+.off-canvas .expand > :where(ul, .mega) {
+  max-height: 2000px;
+}
+
 .off-canvas .thetop-nav ul, .off-canvas nav > ul {
   flex-direction: column;
   align-items: flex-start;
@@ -684,176 +695,563 @@ form.search button:hover {
   margin: 0 0.5em 0.5em 0;
 }
 
+/* --------------
+ * 02. SLIDER
+ * --------------
+ */
+
+ 
+
+ .slider .item {
+  position: relative;
+  height: 474px;
+ }
+ .slider .item::before {
+  content: '';
+  position: absolute;
+  top: 30%;
+  left: 0;
+  width: 450px;
+  height: 300px;
+  background-color: var(--white-color);
+  z-index: 1;
+  filter: blur(50px);
+  opacity: .8;
+ }
+
+ .slider .text-content {
+  position: relative;
+  height: var(--percent100);
+  justify-content: flex-end;
+  padding: 0 0 10% 10%;
+  z-index: 1;
+ }
+
+ .slider h4 {
+  font-size: var(--font-small);
+  font-weight: var(--fw7);
+  width: fit-content;
+  padding: 4px 10px;
+  background-color: var(--dark-color);
+  color: var(--white-color);
+  border-radius: 4px;
+ }
+
+ .text-content :where(h2,h3) span:first-child {
+  font-weight: var(--fw3);
+  columns: var(--light-bg-color);
+ }
+
+ .text-content :where(h2,h3) span:last-child {
+  color: var(--secondary-dark-color);
+  text-transform: uppercase;
+  letter-spacing: -1px;
+ }
+ .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: var(--secondary-dark-color);
+ }
+  
+
+/* -----------------
+ * 03. BRANDS
+ * ----------------- */
+ .brands .wrapper {
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 2em 0;
+ }
+ .brands .item img {
+  opacity: .25;
+  transition: opacity .3s;
+ }
+ .brands .item a:hover img {
+  opacity: 1;
+ }
+
+/* ------------------
+ * 04. PRODUCT BLOCK STYLING
+ * ------------------ */
+ .sectop {
+  justify-content: space-between;
+  padding-bottom: 0.5em;
+  margin-bottom: 2em;
+  border-bottom: 1px solid var(--border-color);
+ }
+ .sectop h2 {
+  position: relative;
+  font-size: 1.5em;
+  font-weight: var(--fw7);
+ }
+ .sectop h2 span:not(.circle) {
+  padding: 0 0 0 2em;
+ }
+
+ .sectop h2 .circle {
+  top: -5px;
+ }
+
+ 
+
+
+ /* ---------------------------
+  * 04.
+  * a. Global product
+  * --------------------------- */
+  
+  .products .offer {
+    text-align: center;
+    margin-bottom: 1.5em;
+  }
+  .products .offer p {
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+  }
+  .products .offer ul {
+    gap: 1em;
+  }
+  .products .offer ul li {
+    position: relative;
+    width: 34px;
+    height: 34px;
+    padding: 0.5em;
+    line-height: initial;
+    color: var(--secondary-dark-color);
+    background-color: var(--light-bg-color);
+    border-radius: 5px;
+  }
+  .products .offer ul li:not(:last-child)::before {
+    content: '';
+    position:absolute;
+    right: -0,6em;
+    color: var(--light-text-color);
+  }
+
+  .products :where(.image, .thumbnail) img {
+    transition: transform .3s;
+  }
+
+  .products :where(.image, .thumnail):hover img {
+    transform: scale(1.1);
+  }
+
+  .products .hoverable {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .products .hoverable li a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    padding: 0.25em;
+    margin: 0.25em;
+    border-radius: var(--percent50);
+    line-height: 1;
+    background-color: var(--white-color);
+    opacity: .5;
+    transition: var(--trans-background-color), opacity .3s;
+  }
+  .products .item:hover .hoverable li a {
+    opacity: 1;
+  }
+
+   .products .hoverable li a:hover {
+    color: var(--white-color);
+    background-color: var(--dark-color);
+   }
+
+   .products .hoverable li.active a:hover {
+    background-color: var(--primary-color);
+   }
+   .products .hoverable li:not(.active) {
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform .3s, opacity .2s;
+   }
+
+   .products .item:hover .hoverable li {
+    transform: translateX(0);
+    opacity: 1;
+   }
+
+   .products .hoverable li:last-child {
+    transition-delay: .1s;
+   }
+
+
+   .products .discount {
+    top: auto;
+    right: 0;
+    left: auto;
+    bottom: 0;
+    background-color: transparent;
+    z-index: 1;
+   }
+
+   .products .discount::before {
+    background-color: var(--dark-color);
+   }
+   .products .discount span {
+    position: relative;
+    font-size: var(--font-smaller);
+    font-weight: var(--fw5);
+    color: var(--white-color);
+   }
+
+   .products .content {
+    display: flex;
+    flex-direction: column;;
+   }
+
+   .products:where(.big,.main, .one) .content {
+    gap: 1em;
+    margin-top: 1.25em;
+   }
+
+
+   .products .rating {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+   }
+   .products .rating .stars {
+    width: 80px;
+    height: 20px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16' fill='rgba(240,187,64,1)'%3E%3Cpath d='M12.0006 18.26L4.94715 22.2082L6.52248 14.2799L0.587891 8.7918L8.61493 7.84006L12.0006 0.5L15.3862 7.84006L23.4132 8.7918L17.4787 14.2799L19.054 22.2082L12.0006 18.26Z'%3E%3C/path%3E%3C/svg%3E");
+    background-position-y: top;
+    background-repeat-y: no-repeat;
+   }
+   /* to setwidth of stars */
+   .products .item:where(:nth-child(3),:nth-child(3)) .stars {
+    width: 64px;
+   }
+   .products h3 {
+    font-family: 'Rubik';
+    font-size: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+   }
+
+   .products h3  a:hover {
+    text-decoration: underline;
+   }
+
+   .products .price .current {
+    font-size: calc(1em + 1vw);
+    color: var(--primary-color);
+    margin-right: 0.25em;
+   }
+
+   .products .price .normal {
+    color: var(--light-text-color);
+    text-decoration: line-through;
+   }
+
+   .products .stock .qty {
+    display: flex;
+    justify-content: space-between;
+   }
+
+   .products .stock .bar {
+    height: 3px;
+    margin-top: 1em;
+    background-color: var(--border-color);
+    overflow: hidden;
+
+   }
+
+   .products .stock .available {
+    height: 3px;
+    width: 21%;
+    background-color: var(--secondary-color);
+   }
+
+   .products .item {
+    display: flex;
+    position: relative;
+  }
+
+  .products .stock-danger {
+    color: var(--primary-color);
+  }
+
+  .flexwrap .row {
+    flex: 0 0 100%;
+    width: 100%;
+    margin-bottom: 2em;
+  }
+
+
+  /* -------------------------------
+   * b. BIG product
+  *-----------------------------------*/
+
+
+  .products.big .item {
+    flex-direction: column;
+    padding: 2.5em;
+    border: 2px solid var(--secondary-dark-color);
+    border-radius: 7px;
+    max-width: 460px;
+    margin: 0 auto;
+  }
+
+
+
+
+
+
+
+/* --------------------------------
+  * c. MINI product
+*-----------------------------------*/
+ 
+.products.mini .item {
+  margin-bottom: 2em;
+}.products.mini .media {
+  width: 130px;
+  height: 160px;
+  margin-right: 1.25em;
+}
+.products.mini .content {
+  margin: 0;
+  gap: 0.75em;
+}
+.products:where(.mini,.main) h3 {
+  font-weight: 400;
+}
+
+
+
+/* 04.Product----------------------------
+ * d. MAIN product
+ *-----------------------------------*/
+
+ .products.main .item {
+  flex-direction: column;
+  flex: 0 0 100%;
+  padding: 0 0.938em;
+  padding-bottom: 2em;
+ }
+  .products.main .media {
+    height: 390px;
+  }
+
+  .products.main .footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 0 1em 1em;
+    border-radius: 7px;
+    background: linear-gradient(0deg, var(--light-bg-color) 0%, var(--white-color) 70%);
+    opacity: 0;
+    visibility: hidden;
+    will-change: opacity;
+    transition: all .2s ease-in-out;
+  }
+
+  .products.main .item:hover .footer {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .products.main .footer ul {
+    list-style: disc;
+    padding: 1.25em 0 0 1.5em;
+    line-height: 1.8;
+    border-top: 1px solid var(--border-color);
+    margin-top: 145px;
+  }
 
   
+  .products.main .item:hover .content > *:not(.footer) {
+    z-index: 3;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ----------------------------------
+ * RESPONSIVE STYLES
+ * ----------------------------------
+ */
+
+ @media screen and (min-width: 481px) {
+  .products.main .item{
+    flex: 0 0 50%;
+  }
+ }
   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  @media screen and (min-width: 768px) {
+    /* Responsive styles for tablets and larger screens */
+    .products .price .current {
+      font-size: 1.25em;
+    }
+    .products.mini {
+      flex: 0 0 50%;
+    }
+    .products.main .item{
+    flex: 0 0 33.3333%;
+    }
+    
+
+    
+  }
 
 
 
@@ -876,6 +1274,7 @@ form.search button:hover {
 
 
 @media screen and (min-width: 992px) {
+  /* Responsive styles for larger screens */
   .container {
     padding: 0 2em;
   }
@@ -900,6 +1299,9 @@ form.search button:hover {
   .header-nav .right li > a {
     margin-left: 1em;
   }
+
+
+
   
   /* Mega Menu */
   nav .mega {
@@ -1022,16 +1424,13 @@ form.search button:hover {
     border: 1px solid var(--border-color);
     border-top: 0;
     display: none;
-    background-position: right-bottom;
+    background-position: right bottom;
     background-repeat: no-repeat;
     background-size: auto;
   }
 
   /* Showing the first sub menu */
-  .dpt-menu .has-child:nth-child(1) > ul {
-    display: block;
-  }
-
+  
   .dpt-menu .beauty ul {
     background-image: url(/assets/menu/menu_bg1.jpg);
   }
@@ -1045,20 +1444,47 @@ form.search button:hover {
     background-image: url(/assets/menu/menu_bg4.jpg);
   }
 
+  .dpt-menu .has-child > :where(ul,.mega)::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(90deg, rgba(225,225,225,1) 0%, rgba(255, 255, 255, 0));
+  }
+
   .dpt-menu .mega {
     width: auto;
     min-width: var(--percent100);
-    
   }
 
   .dpt-menu .has-child:hover .mega {
     display: flex;
+  }
+  /* Slider */
+  .slider > div > .wrapper {
+  width: calc(100% - (300px + 2em));
+  margin-left: auto;
+  }
+  /* Products */
+  .trending .products {
+  flex: 0 0 33.3333%;
+ }
+
+  .products.big .media {
+    max-height: 373px;
+  }
+
+  .products.main .item {
+      flex: 0 0 25%;
   }
 }
 
 
 
 
+  
 
 
 
@@ -1124,7 +1550,10 @@ form.search button:hover {
 
 
 
-@media screen and (min-width: 992px) {
+
+
+
+/* @media screen and (min-width: 992px) {
     .container{
         padding: 0 2em;
     }
@@ -1134,4 +1563,7 @@ form.search button:hover {
     .mobile-hide {
         display: block;
     }
-}
+   */
+
+
+
